# LSH_VMCON

./: .gitignore  1210  3000  CMakeLists.txt  temp
fem/: CMakeLists.txt  Tensor3333.cpp  Tensor3333.h  World.cpp  World.h  fem.h  global_headers.h
fem/Constraint/: AttachmentCst.cpp  AttachmentCst.h  Constraint.h  CorotateFEMCst.cpp  CorotateFEMCst.h  Cst.h  Cst_Data.h  LinearMuscleCst.cpp  LinearMuscleCst.h
fem/Mesh/: DiamondMesh.cpp  DiamondMesh.h  Mesh.h  RectangularMesh.cpp  RectangularMesh.h
gui/: CMakeLists.txt  Camera.cpp  Camera.h  DART_interface.cpp  DART_interface.h  FEM_interface.cpp  FEM_interface.h  GLUTWindow.cpp  GLUTWindow.h  GLfunctions.cpp  GLfunctions.h  Ray.cpp  Ray.h  global_headers.h  gui.h
mesh_test/: SimWindow.cpp  SimWindow.h  main.cpp
output/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+321 more)
render/: DART_helper.cpp  Record.cpp  Record.h  SimWindow.cpp  SimWindow.h  World.cpp  World.h  main.cpp
vmcon/: Ball.cpp  Ball.h  BezierCurve.h  Controller.cpp  Controller.h  DART_helper.cpp  DART_helper.h  FEM_interface.cpp  FEM_interface.h  FSM.cpp  FSM.h  FiniteStateMachine.cpp  FiniteStateMachine.h  IKOptimization.cpp  IKOptimization.h  IntegratedWorld.cpp  IntegratedWorld.h  Juggling.cpp  Juggling.h  MuscleOptimization.cpp  MuscleOptimization.h  MusculoSkeletalSystem.cpp  MusculoSkeletalSystem.h  Record.cpp  Record.h  SimWindow.cpp  SimWindow.h  m.cpp  main.cpp
vmcon/Deprecate/: Ball.cpp  BezierCurve.h  FSM.cpp  FiniteStateMachine.h
vmcon/FSM/: BezierCurve.h  Juggling.cpp  Juggling.h  Machine.cpp  Machine.h  Sampler.cpp  Sampler.h
vmcon/export/: muscle_params.xml  param.txt  param2.txt
vmcon/iLQR/: MusculoSkeletalLQR.cpp  MusculoSkeletalLQR.h  iLQR.cpp  iLQR.h
